--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,8 +17,8 @@ android {
         applicationId "com.shoji.example.android.popularmoviesstage1"
         minSdkVersion 19
         targetSdkVersion 26
-        versionCode 1
-        versionName "1.0"
+        versionCode 2
+        versionName "Stage 2"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
         ////
